--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -85,7 +85,7 @@
   --primary-t-color: #f5f5f5;
   --secondary-t-color: #f5f5f5;
   --primary-p-color: #ffffff;
-  --secondary-p-color: #e1e1e1;
+  --secondary-p-color: #808080;
   --primary-b-color: #f5f5f5;
   --primary-l-color: rgba(0, 0, 0, 0.12);
   --secondary-l-color: rgba(255, 255, 255, 0.12);
@@ -479,19 +479,19 @@ img {
 }
 
 ::-webkit-input-placeholder {
-  color: var(--primary-p-color) !important;
+  color: var(--secondary-p-color) !important;
 }
 
 :-ms-input-placeholder {
-  color: var(--primary-p-color) !important;
+  color: var(--secondary-p-color) !important;
 }
 
 ::-ms-input-placeholder {
-  color: var(--primary-p-color) !important;
+  color: var(--secondary-p-color) !important;
 }
 
 ::placeholder {
-  color: var(--primary-p-color) !important;
+  color: var(--secondary-p-color) !important;
 }
 
 table {
